--- a/4.Python Project for Data Science/Final Project/Final_Project.ipynb
+++ b/4.Python Project for Data Science/Final Project/Final_Project.ipynb
@@ -21091,6 +21091,14 @@
    "source": [
     "make_graph(gme_data, gme_revenue, 'Gamestop')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Author</h3>\n",
+    "Sourav Dutta"
+   ]
   }
  ],
  "metadata": {
